--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <div></div>
+    <div>这是一行红色的文字</div>
 </body>
 
 </html>
